monitor/ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodeos-ingress
  annotations:
    kubernetes.to/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "grafana.helixious.local"
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: "nodeos.helixious.local"
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeos-svc
          servicePort: 8888
      - path: /master/p2p
        backend:
          serviceName: nodeos-svc
          servicePort: 9000
